# Paper-Monitor

./: .gitignore  README.md  chat_with_config.py  pyproject.toml  使用手册.md  命令速查表.md  开发者手册.md
config/: config-SAURLAX.json  config-ikun.json  config-poe.json  config.example.json  config.json
paper_monitor/: __main__.py  cli.py  config.py  enrichment.py  llm.py  llm_registry.py  models.py  pipeline.py  progress.py  prompts.py  reports.py  scheduler.py  scoring.py  storage.py  summarize.py  utils.py
paper_monitor/fetchers/: __init__.py  arxiv.py  dblp.py  scholar_alerts.py
prompts/: paper_chunk_system.txt  paper_chunk_user.txt  paper_reduce_system.txt  paper_reduce_user.txt  paper_summary_system.txt  paper_summary_user.txt  topic_digest_system.txt  topic_digest_user.txt
tests/: test_monitor.py
